# relay-serve

./: .env.template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  docker-compose.full-stack.yml  docker-compose.yml  pyproject.toml  ruff.toml  upgrade_pyproject.py
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature_request.yml  question.yml
app/: main.py
app/ai/: __init__.py  chat.py  memory.py  providers.py  router.py
app/ai/dependencies/: chat.py
app/ai/providers/: __init__.py  anthropic.py  base.py  bedrock.py  cohere.py  factory.py  gemini.py  groq.py  mistral.py  openai.py
app/ai/schemas/: chat.py  stream.py
app/ai/services/: __init__.py  chat.py  sse.py  tool_tracker.py  (+1 more)
app/api/: exceptions.py
app/attachment/: constants.py  crud.py  dependencies.py  model.py  router.py  schema.py  service.py
app/chat/: constants.py
app/core/: config.py  constants.py  exceptions.py  logfire.py  sentry.py
app/database/: base.py  base_class.py  crud.py  dependencies.py  session.py
app/llm/: router.py
app/llms/: constants.py  dependencies.py  exceptions.py
app/mcp_server/: crud.py  dependencies.py  lifecycle.py  model.py  router.py  schema.py  service.py  utils.py  validator.py
app/message/: constants.py  crud.py  dependencies.py  exceptions.py  model.py  router.py  schema.py  service.py
app/model/: constants.py  crud.py  dependencies.py  exceptions.py  model.py  router.py  schema.py  service.py
app/model_context_protocol/: constants.py  exceptions.py  initialize.py  manager.py  registry.py  router.py  utils.py
app/provider/: crud.py  dependencies.py  model.py  router.py  schema.py  service.py
app/providers/: base.py  constants.py  exceptions.py  factory.py
app/session/: constants.py  crud.py  dependencies.py  model.py  router.py  schema.py  service.py
app/storages/: local.py  utils.py
docker/: dockerfile  entrypoint.sh  neo4j_auth.txt
migrations/: env.py
migrations/versions/: 2ee13cbe8dbf_remove_sse_from_servertype_enum.py  3f3e737e7f8e_added_models_for_providers_models_.py  445b888c586e_added_database_models_for_llmprovider_.py  4c47b832eeff_added_models_for_llmprovider_llmmodel_.py  5474b7b6f3c8_added_mcpserver_model.py  678d2e646d11_adde_sessionfact_table_and_added_memory_.py  6c2d9c0a299b_update_chatmessage_content_and_.py  78e7f8a810e5_added_database_models_for_llm_providers_.py  7fa0ee8c04b0_added_attachment_model_made_content_.py  c202a093d733_added_models_for_providers_models_.py  e08d584030f3_added_models_for_providers_models_.py  f82efbf53d49_added_attachement_model.py  fdaa184ab7c7_make_api_key_optional.py
scripts/: setup-full-stack.sh
(+156 files in other folders)
